[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://Scripts/Part2/CompanionStatusUI.gd" id="1_script"]

[node name="CompanionStatusUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.490196)

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -350.0
offset_top = -280.0
offset_right = 350.0
offset_bottom = 280.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 40.0
offset_top = 40.0
offset_right = -40.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="NameLabel" type="Label" parent="Panel/VBox"]
layout_mode = 2
text = "Companion Name"
horizontal_alignment = 1

[node name="CompanionPreview" type="TextureRect" parent="Panel/VBox"]
custom_minimum_size = Vector2(180, 180)
layout_mode = 2
size_flags_horizontal = 4
expand_mode = 1
stretch_mode = 5

[node name="LevelLabel" type="Label" parent="Panel/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.4, 1, 0.6, 1)
text = "ระดับ: 1"
horizontal_alignment = 1

[node name="DescLabel" type="Label" parent="Panel/VBox"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
text = "Description goes here..."
horizontal_alignment = 1
autowrap_mode = 2

[node name="HSeparator" type="HSeparator" parent="Panel/VBox"]
layout_mode = 2

[node name="SkillInfo" type="Label" parent="Panel/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.8, 0.4, 1)
text = "Skill: XXXXX"

[node name="StatInfo" type="Label" parent="Panel/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.8, 1, 1)
text = "Stats: XXXXX"

[node name="CloseBtn" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -60.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = 60.0
grow_horizontal = 0
text = "✕"

[connection signal="pressed" from="Panel/CloseBtn" to="." method="_on_close_btn_pressed"]
